syntax = "proto3";

option csharp_namespace = "SharedApiUtils.gRPC.ServicesAccessing.Protos";
import "google/protobuf/empty.proto";

service RoomsEvents{
	rpc OnRoomCreated(OnRoomCreatedRequest) returns(google.protobuf.Empty);
	rpc OnRoomDeleated(OnRoomDeleatedRequest) returns(google.protobuf.Empty);
	rpc OnRoomJoin(OnRoomJoinRequest) returns (google.protobuf.Empty);
	rpc OnRoomLeave(OnRoomLeaveRequest) returns (google.protobuf.Empty);
}
message RoomEventRoomInfo{
	string GameId = 1;
	string RoomName = 2;
	bool IsPrivate = 3;
	int32 SelectedPlayersCount = 4;
	int32 CurrentPlayersCount = 5;
	string RoomId = 6;
	string Creator = 7;
}
message OnRoomCreatedRequest{
	RoomEventRoomInfo RoomInfo = 1;
}
message OnRoomDeleatedRequest{
	RoomEventRoomInfo RoomInfo = 1;
	repeated string Members = 2;
}
message OnRoomJoinRequest{
	RoomEventRoomInfo RoomInfo = 1;
	repeated string Members = 2;
	string JoinedMember = 3;
}
message OnRoomLeaveRequest{
	RoomEventRoomInfo RoomInfo = 1;
	repeated string Members = 2;
	string RemovedMember = 3;
}